--- a/src/style/CSS.css
+++ b/src/style/CSS.css
@@ -336,3 +336,21 @@ ul {
   cursor: pointer;
   vertical-align: top;
 }
+/**********loader*****************/
+
+
+.wrapperLoading {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  z-index: 8;
+  top: 0;
+  background: rgba(0, 0, 0, 0.039);
+}
+
+.loader {
+  width: 100px;
+}
